--- a/maple-server/conifg/settings.yml
+++ b/maple-server/conifg/settings.yml
@@ -1,4 +1,13 @@
 settings:
+  application:
+    domian: localhost:8002
+    host: 0.0.0.0
+    ishttps: false
+    mode: dev
+    name: maple-test
+    port: "8002"
+    readtimeout: 1
+    writertimeout: 2
   log:
     compress: 1
     consolestdout: 1
